--- a/_config.yml
+++ b/_config.yml
@@ -12,18 +12,19 @@
 
 # theme                  : "minimal-mistakes-jekyll"
 # remote_theme           : "mmistakes/minimal-mistakes"
-minimal_mistakes_skin    : "dark" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Site Title"
+title                    : "Emanuel Cura Costa"
 title_separator          : "-"
-subtitle                 : # site tagline that appears below site title in masthead
+subtitle                 : "Researcher | Python Developer & Data Scientist | Systems Biology Specialist"
 name                     : "Emanuel Cura Costa"
-description              : "An amazing website."
-url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+description              : "Welcome to my personal website where I share my work and interests."
+url                      : "https://ecuracosta.github.io" # Update with your site's URL
+baseurl                  : ""
+repository               : "ecuracosta/ecuracosta.github.io" # Update with your repository
+
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
@@ -80,8 +81,10 @@ yandex_site_verification :
 baidu_site_verification  :
 
 # Social Sharing
+linkedin:
+  username               : curacosta
 twitter:
-  username               :
+  username               : CuraCosta
 facebook:
   username               :
   app_id                 :
@@ -108,26 +111,23 @@ author:
   avatar           : "/assets/images/profile.png"
   bio              : "Researcher | Python Developer & Data Scientist | Systems Biology Specialist"
   location         : "La Plata, Argentina"
-  email            :
+  email            : "ecuracosta@gmail.com" # Update with your email
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
       url: "mailto:ecuracosta@gmail.com"
     - label: "Website"
       icon: "fas fa-fw fa-link"
-      # url: "https://your-website.com"
+      url: "https://ecuracosta.github.io" # Update with your site's URL
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/CuraCosta
-    - label: "Facebook"
-      icon: "fab fa-fw fa-facebook-square"
-      # url: "https://facebook.com/"
+      url: "https://twitter.com/CuraCosta"
+    - label: "LinkedIn"
+      icon: "fab fa-fw fa-linkedin"
+      url: "https://www.linkedin.com/in/your-linkedin-username" # Update with your LinkedIn URL
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      # url: "https://github.com/"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      # url: "https://instagram.com/"
+      url: "https://github.com/ecuracosta"
 
 # Site Footer
 footer:
