--- a/_config.yml
+++ b/_config.yml
@@ -113,18 +113,18 @@ author:
   location         : "La Plata, Argentina"
   email            : "ecuracosta@gmail.com" # Update with your email
   links:
-    - label: "Email"
-      icon: "fas fa-fw fa-envelope-square"
-      url: "mailto:ecuracosta@gmail.com"
-    - label: "Website"
-      icon: "fas fa-fw fa-link"
-      url: "https://ecuracosta.github.io" # Update with your site's URL
+#    - label: "Email"
+#      icon: "fas fa-fw fa-envelope-square"
+#      url: "mailto:ecuracosta@gmail.com"
+#    - label: "Website"
+#      icon: "fas fa-fw fa-link"
+#      url: "https://ecuracosta.github.io" # Update with your site's URL
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       url: "https://twitter.com/CuraCosta"
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin"
-      url: "https://www.linkedin.com/in/your-linkedin-username" # Update with your LinkedIn URL
+      url: "https://www.linkedin.com/in/curacosta" # Update with your LinkedIn URL
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/ecuracosta"
