--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ comments:
     category_id          : # Shown during giscus setup at https://giscus.app
     discussion_term      : # "pathname" (default), "url", "title", "og:title"
     reactions_enabled    : # '1' for enabled (default), '0' for disabled
-    theme                : # "light" (default), "dark", "dark_dimmed", "transparent_dark", "preferred_color_scheme"
+    theme                : "dark" # "light" (default), "dark", "dark_dimmed", "transparent_dark", "preferred_color_scheme"
   staticman:
     branch               : # "master"
     endpoint             : # "https://{your Staticman v3 API}/v3/entry/github/"
@@ -107,9 +107,9 @@ analytics:
 
 # Site Author
 author:
-  name             : "Emanuel Cura Costa"
+  name             : "ecuracosta"
   avatar           : "/assets/images/profile.png"
-  bio              : "Researcher | Python Developer & Data Scientist | Systems Biology Specialist"
+  bio: "Bridging gaps across disciplines. Let’s connect and transcend conventional boundaries to solve complex problems."
   location         : "La Plata, Argentina"
   email            : "ecuracosta@gmail.com" # Update with your email
   links:
@@ -124,7 +124,7 @@ author:
       url: "https://twitter.com/CuraCosta"
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin"
-      url: "https://www.linkedin.com/in/curacosta" # Update with your LinkedIn URL
+      url: "https://www.linkedin.com/in/ecuracosta" # Update with your LinkedIn URL
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/ecuracosta"
