--- a/_config.yml
+++ b/_config.yml
@@ -73,6 +73,19 @@ algolia:
 google:
   search_engine_id       : # YOUR_SEARCH_ENGINE_ID
   instant_search         : # false (default), true
+
+# Navigation Bar
+main:
+  - title: "About"
+    url: /about/
+  - title: "Projects"
+    url: /projects/
+  - title: "Publications"
+    url: /publications/
+  - title: "Blog"
+    url: /blog/
+
+
 # SEO Related
 google_site_verification :
 bing_site_verification   :
