--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,12 +1,11 @@
-# main links
+
+# Navigation Bar
 main:
-  - title: "Quick-Start Guide"
-    url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
-  # - title: "About"
-  #   url: https://mmistakes.github.io/minimal-mistakes/about/
-  # - title: "Sample Posts"
-  #   url: /year-archive/
-  # - title: "Sample Collections"
-  #   url: /collection-archive/
-  # - title: "Sitemap"
-  #   url: /sitemap/
+  - title: "About"
+    url: pages/about/
+  - title: "Projects"
+    url: pages/projects/
+  - title: "Publications"
+    url: pages/publications/
+#  - title: "Blog"
+#    url: pages/blog/
