--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,10 +2,10 @@
 # Navigation Bar
 main:
   - title: "About"
-    url: pages/about/
+    url: _pages/about/
   - title: "Projects"
-    url: pages/projects/
+    url: _pages/projects/
   - title: "Publications"
-    url: pages/publications/
+    url: _pages/publications/
 #  - title: "Blog"
 #    url: pages/blog/
