added cv to nav

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,5 +4,7 @@ main:
     url: /projects/
   - title: "Publications"
     url: /publications/
+  - title: "Short CV"
+    url: /cv/
 #  - title: "Blog"
 #    url: /blog/
